# zeta_applied

./: LICENSE  README.md  article.tex  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: dna_benchmark.md  hard_benchmark.md  protein_benchmark.md
examples/: bench_dna.py  bench_hard.py  bench_phylogeny.py  bench_protein.py  bench_viral.py  bench_viral_fast.py  bench_viral_sw.py
src/biospectral/: __init__.py  dna.py  protein.py
tests/: test_smoke.py
