[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biospectral"
version = "1.0.0"
description = "Dirichlet L-function spectral analysis of DNA and protein sequences"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Konstantin Parashchuk" }]
keywords = [
    "dirichlet-l",
    "l-function",
    "dna",
    "protein",
    "spectral-analysis",
    "bioinformatics",
    "sequence-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
tests = ["pytest>=7.0"]

[project.urls]
"Repository" = "https://github.com/kostyk348/biospectral"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
